# accio

./: .lgtm.yml  .travis.yml  AUTHORS  CMakeLists.txt  Readme.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE
.travis-ci.d/: compile_and_test.sh  coverity_scan.sh
source/examples/: CMakeLists.txt
source/examples/simple/: common.h  reader.cc
source/include/accio/: buffer.h  copy.h  definitions.h  stream.h  string.h  writer.h
source/include/accio/details/: buffer_impl.h  copy_impl.h  stream_impl.h  writer_impl.h
source/include/accio/testing/: unit_test.h
source/src/: copy.cc  stream.cc
source/tests/: test_accio_buffer.cc  test_accio_pods.cc  test_accio_stream.cc  test_accio_string.cc  test_fio_buffer.cc  test_fio_stream.cc
